SERVER-36740 Sometimes crashes on windows don't provide a backtrace

(cherry picked from commit f5b4471bc5d0bee53474456761417222ddd4654e)